log
Fri 05 May 2023 02:33:50 AM UTC: 
 tests:  0|5
total_score: 0/70
cb3d3ab
Fri 05 May 2023 02:34:15 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9031b60
Fri 05 May 2023 02:34:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6a496ed
Fri 05 May 2023 02:57:50 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:38: error: statement with no effect [-Werror=unused-value]
   65 |                 nodeRemp->sudo[i][k] == valor;
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
34bb3b9
Fri 05 May 2023 03:35:02 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:31: error: ‘j’ undeclared (first use in this function)
   66 |             new_node->sudo[i][j] = k;
      |                               ^
sudoku.c:66:31: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:54:9: error: variable ‘nodeRemp’ set but not used [-Werror=unused-but-set-variable]
   54 |   Node *nodeRemp =createNode();
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
84130a9
Fri 05 May 2023 03:35:13 AM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:31: error: ‘j’ undeclared (first use in this function)
   64 |             new_node->sudo[i][j] = k;
      |                               ^
sudoku.c:64:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b89d031
Fri 05 May 2023 03:35:28 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:25: error: ‘k’ undeclared (first use in this function)
   56 |       for(int j=0; j<9; k++)
      |                         ^
sudoku.c:56:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8bbae10
Fri 05 May 2023 03:35:34 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2f0c012
Fri 05 May 2023 03:37:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ea07f4d
Fri 05 May 2023 03:37:47 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
1a13862
Fri 05 May 2023 03:38:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f08ece7
Fri 05 May 2023 03:38:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8f56566
Fri 05 May 2023 03:39:18 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1fcb1a0
Fri 05 May 2023 03:40:20 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
95ced38
Fri 05 May 2023 03:42:31 AM UTC: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
f6eb9c7
Fri 05 May 2023 03:42:46 AM UTC: 
 sudoku.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:103:14: error: implicit declaration of function ‘isValid’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
  103 |           if(isValid(n, i, j, k)){
      |              ^~~~~~~
      |              is_valid
cc1: all warnings being treated as errors
Compilation failed
de8cec5
Fri 05 May 2023 03:42:52 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:103:14: error: too many arguments to function ‘is_valid’
  103 |           if(is_valid(n, i, j, k)){
      |              ^~~~~~~~
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n){
      |     ^~~~~~~~
Compilation failed
8c959de
Fri 05 May 2023 03:44:27 AM UTC: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:113:19: error: implicit declaration of function ‘freeNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
  113 |                   freeNode(new_node);
      |                   ^~~~~~~~
      |                   createNode
cc1: all warnings being treated as errors
Compilation failed
ef43660
Fri 05 May 2023 03:44:40 AM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|3
total_score: 35/70
157d086
Fri 05 May 2023 03:45:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c:118:4: error: expected identifier or ‘(’ before ‘return’
  118 |    return list;
      |    ^~~~~~
sudoku.c:119:1: error: expected identifier or ‘(’ before ‘}’ token
  119 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:116:4: error: control reaches end of non-void function [-Werror=return-type]
  116 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
85fa099
Fri 05 May 2023 03:45:21 AM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
sudoku.c:115:4: error: expected identifier or ‘(’ before ‘return’
  115 |    return list;
      |    ^~~~~~
sudoku.c:116:1: error: expected identifier or ‘(’ before ‘}’ token
  116 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:113:4: error: control reaches end of non-void function [-Werror=return-type]
  113 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
55dbee3
Fri 05 May 2023 03:45:35 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
4baaf75
